v136
    -Add InstallShield CAB parser (ver 5), contains zlib streams.
     Active for extension .cab
    -Add virutal file group for .cab extension
    -In PDFLzwParser add JPXDecode and JBIG2Decode as CMP type.
    -Re-enable .zip based extension parser
    -Add .tga based extension parser
    -In zip parser extract file extension and allow uncompressed files
    -In szddparser set min lenght to 128 bytes.
    -Fix bad parsing in mrbparser.
v135
    -In zlib parser set priority to 3 if possible image header was detected.
    -In iso parser show info about how many files are there.
v134
    -In png parser detect iCCP compressed chunk, test for grayscale
    -Add iso 9960 parser. Active for extension .iso
    -Cleanup and small fixes
    -Fix pdfbiparser, set min width limit to >1
    -Disable pre- and post-filter (WRT) for streams 8 and 9.
     In rare cases, the result will not be identical.
    -In the ISO parser, make sure there are no previous folder entries.
v133
    -In mdf parser set minimum length to 4 sectors
    -Change text parser
    -Reset info text in zlib parser
    -Fix wrong info when MT is not defined
    -Remove some text related code from codec
    -No parser outputs BINTEXT, ISOTEXT so disable in most places
v132
    -Disable zip extension. If files are stored, the contents will not be recognized.
    -Limit gzip min size to 6.
    -Fixes in codec.
    -Use a maximum of one temporary memory/disk file per recursion level.
     In some exceptional cases, more. To reduce memory relocation.
    -Fix tar parser
    -Show less parsing progress
    -Fix png compression
    -Detect tar without ustar
    -Cleanup
    -More file extension based parser selections
v131
    -Add file extension based parser selection and virtual files
    -Enable tar recursion mode, select parser for each file from file extension
v130
    -Fix large memory leaks in parser, now mem usage ~400MB RAM, before in GB
    -Add tar parser recursive mode (disabled)