@@ -38,7 +38,8 @@ class Codec {
     Streams *streams;
     Segment *segment;
     std::vector<Filter*> filters;
-    
+    uint64_t fsame;
+    uint64_t fdiff;
     void AddFilter(Filter *f);
     void direct_encode_blockstream(Filetype type, File*in, U64 len, int info=0);
     void transform_encode_block(Filetype type, File*in, U64 len, int info, int info2, char *blstr, int it, U64 begin,File*tmp);
@@ -49,6 +50,7 @@ class Codec {
         virtual void DecodeFile(const char* filename, uint64_t filesize);
         virtual void EncodeFile(const char* filename, uint64_t filesize);
         virtual Filter* GetFilter(Filetype f);
+        void PrintResult();
     protected:
         virtual uint64_t DecodeFromStream(File *out, uint64_t size, FMode mode, int it=0);
         virtual void EncodeFileRecursive(File*in, uint64_t n, char *blstr, int it=0, Filetype p=DEFAULT, ParserType etype=P_DEF);
