@@ -1,3 +1,9 @@
+v137
+    -Show count of files in tar parser.
+    -Fix iso parser for large files (+4G).
+    -Fix mdf parser.
+    -Fix cd parser.
+    -Cleanup compare/extract log. Show final summary.
 v136
     -Add InstallShield CAB parser (ver 5), contains zlib streams.
      Active for extension .cab
